Added html and javascript to display posts.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<head>
+  <head>
     <title>Forum</title>
     <meta charset="utf-8">
     <meta name="description" content="An awesome forum site!">
@@ -10,11 +10,13 @@
     <!-- <link rel="stylesheet" type="text/css" href="styles/stylesheet.css"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/javascript.js"></script>
-</head>
+  </head>
 
-<body>
-    <h1 id="title">Hello!</h1>
-    <p>Welcome to my web page!</p>
-</body>
+  <body>
+    <h1 id="title">This is a forum!</h1>
+    <button id="get_posts_btn">Get Posts!</button>
+    <section id="posts">
+    </section>
+  </body>
 
 </html>
