--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="An awesome forum site!">
     <meta name="author" content="Sophia Freaney, Sarah Joyce, Matthew Zelinsky">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" type="text/css" href="styles/stylesheet.css"> -->
+    <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/javascript.js"></script>
   </head>
